Progress on batch sequential design tests.

--- a/sequential_design_GP_paper.tex
+++ b/sequential_design_GP_paper.tex
@@ -40,7 +40,7 @@
 \newtheorem{corollary}{Corollary}
 
 % Title and author
-\title{A Framework for Scalable Ecosystem Model Calibration}
+\title{Sequential Design for the Solution of Bayesian Inverse Problems}
 \author{Andrew Roberts}
 
 \begin{document}
@@ -92,7 +92,11 @@ I believe this terminology comes from paper ``Asymptotic analysis of stochastic 
 \subsection{Optimization}
 \subsection{Marginalization}
 
-
+\section{TODOs}
+\begin{enumerate}
+\item Better understand the effect of conditioning on lpost/post emulator vs. conditioning on underlying GPs. 
+\item Investigate why lpost prediction is yielding so many negative variances. 
+\end{enumerate}
 
 
 
