--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -257,6 +257,96 @@ round0_sample_metrics <- compute_mcmc_comparison_metrics(samp_dt = mcmc_samp_dt,
                                                          metrics = c("mean", "cov"))
 ```
 
+```{r}
+#
+# Test batch acquisition.
+#
+
+# Candidate and integration points. 
+samp_round0_theta <- select_mcmc_samp(mcmc_samp_dt, burn_in_start = burn_ins, test_labels = round0_labels[1], param_types = "theta")[, .(param_name, sample)]
+samp_round0_theta <- as.matrix(unstack(samp_round0_theta, sample ~ param_name))[, computer_model_data$pars_cal_names]
+
+
+acquisition_settings <- list(acquisition_type = "EIVAR_lpost",
+                             opt_method = "grid",
+                             batch_size = 10, 
+                             batch_method = "kriging_believer",
+                             theta_grid_candidate = scale_input_data(samp_round0_theta, input_bounds = design_list_round0[[1]]$input_bounds), 
+                             theta_grid_integrate = scale_input_data(samp_round0_theta, input_bounds = design_list_round0[[1]]$input_bounds), 
+                             N_subsample_candidate = 10000, 
+                             N_subsample_integrate = 3000)
+
+lpost_emulator_new_batch <- batch_acquisition_opt_one_step(lpost_emulators[[1]], acquisition_settings)
+
+```
+
+
+```{r}
+# Plot batch points acquired. 
+new_batch_sel <- c(rep(FALSE, nrow(lpost_emulator_new_batch$inputs_lpost$inputs) - acquisition_settings$batch_size), 
+                   rep(TRUE, acquisition_settings$batch_size))
+
+
+SSR_vals <- get_computer_model_SSR(computer_model_data = computer_model_data, 
+                                   theta_vals = samp_round0_theta, na.rm = TRUE)
+lprior_vals <- calc_lprior_theta(samp_round0_theta, theta_prior_params)
+
+lpost_vals_round0 <- calc_lpost_theta_product_lik(computer_model_data = computer_model_data, 
+                                                  theta_vals = samp_round0_theta, 
+                                                  SSR = SSR_vals, 
+                                                  vars_obs = lpost_emulator_new_batch$sig2_eps, 
+                                                  lprior_vals = lprior_vals,
+                                                  return_list = FALSE)
+
+batch_plot <- get_2d_Bayes_opt_heatmap_plot(theta_vals = samp_round0_theta, 
+                                            lpost_vals = lpost_vals_round0,
+                                            computer_model_data = computer_model_data, param_names = computer_model_data$pars_cal_names, 
+                                            samples_kde = samp_exact_theta, 
+                                            init_design_points = lpost_emulator_new_batch$inputs_lpost$inputs[!new_batch_sel,,drop=FALSE], 
+                                            sequential_design_points = lpost_emulator_new_batch$inputs_lpost$inputs[new_batch_sel,,drop=FALSE],
+                                            raster = FALSE, point_coords = computer_model_data$theta_true, 
+                                            main_title = "Batch acquisition: EI-lpost, KB", 
+                                            bigger_is_better = TRUE, log_scale = FALSE)
+                                            
+plot(batch_plot)
+
+```
+
+```{r}
+# GP predictive mean and variance plots. 
+pred <- predict_lpost_emulator(lpost_emulator = lpost_emulators[[1]], 
+                               inputs_new_scaled = scale_input_data(samp_round0_theta, input_bounds = lpost_emulators[[1]]$emulator_info_list$input_bounds), 
+                               inputs_new_unscaled = samp_round0_theta, include_nugget = TRUE)
+
+plt_mean <- get_2d_heatmap_plot(X = samp_round0_theta, y = pred$mean, param_names = computer_model_data$pars_cal_names, 
+                                samples_kde = samp_exact_theta, raster = FALSE, 
+                                samples_points = lpost_emulator_new_batch$inputs_lpost$inputs[!new_batch_sel,,drop=FALSE], 
+                                point_coords = computer_model_data$theta_true, bigger_is_better = TRUE)
+plt_var <- get_2d_heatmap_plot(X = samp_round0_theta, y = drop(pred$var), param_names = computer_model_data$pars_cal_names, 
+                               samples_kde = samp_exact_theta, raster = FALSE, 
+                               samples_points = lpost_emulator_new_batch$inputs_lpost$inputs[!new_batch_sel,,drop=FALSE], 
+                               point_coords = computer_model_data$theta_true, bigger_is_better = TRUE, log_scale = TRUE)
+
+plot(plt_mean)
+plot(plt_var)
+```
+
+
+```{r}
+# Underlying GP Predictions. 
+pred_GPs <- predict_independent_GPs(X_pred = scale_input_data(samp_round0_theta, input_bounds = lpost_emulators[[1]]$emulator_info_list$input_bounds), 
+                                    gp_obj_list = lpost_emulator_new_batch$emulator_info_list$gp_fits, 
+                                    gp_lib = lpost_emulator_new_batch$emulator_info_list$settings$gp_lib)
+
+
+```
+
+
+
+
+
+
+
 
 
 
